fix:  - fix dark mode  - responsive for 1440px

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,6 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
+body {
+  background-color: white;
+}
+
 button {
   #btn-icon {
     transition: all .2s ease;
